[tool.poetry]
name = "s3select"
version = "0.1.0"
description = ""
authors = ["Aleksey Gureiev <agureiev@shakuro.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.25"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
black = "^22.6.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
